See http://github.com/miyagawa/cpanminus/ for the latest development.

{{$NEXT}}

1.7039.5  2018-12-11 12:56:36 EDT
    MF: fix logging for metacpan queries

1.7039.4  2018-11-15 11:39:10 EDT
    MF: fastapi support

1.7039.3  2016-02-16 13:27:00 EDT
    PK: Allow passing in of params to Makefile.PL via ENV

1.7039.2  2015-10-21 15:00:00 EDT
    PK: When there are ambiguious matches prefer dists that match the module name

1.7029.1  2015-10-13 10:34:00 EDT
    PK: Applied all the GSG patches
      - Add an --api-only flag to keep cpanm from consulting packages02.txt 
        because in some darkpans that file may be inaccurate.
      - Add support for --mirror-api
      - A few performance improvements
      - Allow exact matching of versions containing 
        leading zeros in their alpha component.
      - Clear out old .meta files
      - Correctly find non-latest-non-v-string versions 
        with > 2 tuples (like PDF-Table-0.9.5)
      - Correctly find versions with > 2 tuples and leading zeros (like 1.02.3)
      - Correctly handle versionless sub-modules (otherwise chooses a random old one)
      - Do version checking across sub-dep levels
      - First try to download recent packages from mirrors 
        before failing over to cpan.metacpan.org
      - If a mirror returns 404 don't display it as a failure and don't bother retrying.
      - Improve dev-version support so that a dev version is pulled in 
        if the release only has dev versions even if --dev is not specified.
      - Install modules in consistent order
      - Make curl create an empty file if it gets a 404
      - Properly handle circular deps
      - Read sub dependencies from cpanfile instead of MYMETA.yml
      - Restrict the regex patch to v-strings dev versions since regexp 
        doesn't work on api.metacpan.org
      - Write dev-version module's 'meta-provides' info to the install.json file.
        This allows Carton to write dev-version modules to the cpanfile.snapshot.
